[package]
name = "decimal"
version = "0.10.1"
edition = "2021"

[features]
anchor = ["anchor-lang"]
anyhow_error = ["anyhow", "thiserror"]
default = ["anyhow_error"]

[dependencies]
anchor-lang = { version = "0.24.2", optional = true }
uint = "0.9"
anyhow = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
