[package]
name = "decimal"
version = "0.10.3"
edition = "2021"

[features]
anchor = ["anchor-lang"]
anyhow_error = ["anyhow", "thiserror"]
default = ["anyhow_error"]

[dependencies]
borsh = "0.9.3"
anchor-lang = { version = "0.24.2", optional = true }
anyhow = { version = "1.0", optional = true }
serde = { version = "1.0.149", features = ["derive"] }
thiserror = { version = "1.0", optional = true }
uint = "0.9"
